# GTM

./: README.md
doc/Schematic/examples/AD3.5RTC/: README_CN.md  readme.md
doc/Schematic/examples/AD3.5RTC/components/QM-Y1091-4832/: CMakeLists.txt  qmsd_board.c
doc/Schematic/examples/AD3.5RTC/components/VolcEngineRTCLite/: CMakeLists.txt
doc/Schematic/examples/AD3.5RTC/components/board_to_adf/: board_def.h
doc/Schematic/examples/AD3.5RTC/components/es8311/: CMakeLists.txt
doc/Schematic/examples/AD3.5RTC/main/: CMakeLists.txt  KeyHandle.c  WifiConfig.c  idf_component.yml  lv_img_icon.c  main.c  spiffs_amr_resample_example.c
doc/Schematic/examples/AD3.5RTC/main/ui_code/: CMakeLists.txt  ui.c  ui.h  ui_helpers.c
doc/Schematic/examples/AD3.5RTC/main/ui_code/fonts/: ui_font_Font32.c  ui_font_Small.c
doc/Schematic/examples/Esp32AgentDevKit/: CMakeLists.txt  README_CN.md  partitions.csv  readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
doc/Schematic/examples/Esp32AgentDevKit/components/board_to_adf/: CMakeLists.txt  board.c
doc/Schematic/examples/Esp32AgentDevKit/components/es8311/: es8311.c
doc/Schematic/examples/Esp32AgentDevKit/main/: AudioPipeline.h  VolcRTCDemo.c  VolcRTCDemo.h  main.c  test_ui.c
doc/Schematic/examples/Esp32AgentDevKit/main/start_bot/: start_bot.h
doc/Schematic/examples/Esp32AgentDevKit/main/ui_code/: ui_events.h  ui_helpers.h
examples/AD3.5RTC/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/AD3.5RTC/components/QM-Y1091-4832/: qmsd_board_pin.h
examples/AD3.5RTC/components/VolcEngineRTCLite/: idf_component.yml
examples/AD3.5RTC/components/board_to_adf/: board_pins_config.c
examples/AD3.5RTC/components/esp_peripherals/: CMakeLists.txt
examples/AD3.5RTC/components/mk2016/: mkpb2016.c  mkpb2016.h
examples/AD3.5RTC/main/: AudioPipeline.c  KeyHandle.c  WifiConfig.c  config.h  main_back.c  opus_frames.h
examples/AD3.5RTC/main/start_bot/: start_bot.c
examples/AD3.5RTC/main/ui_code/: filelist.txt
examples/AD3.5RTC/main/ui_code/fonts/: ui_font_Big.c  ui_font_Number.c
examples/AD3.5RTC/main/ui_code/screens/: ui_Screen1.c  ui_configwifi.c
(+5 files in other folders)
